<resources>
    <string name="app_name">AMIV Check-in</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="submit">Submit</string>
    <string name="enter_event_pin">Enter Event PIN</string>

    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="no_internet">No Internet</string>
    <string name="checkin_server_url">https://checkin.amiv.ethz.ch</string>
</resources>
