<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.amiv.checkin.ScanActivity"
    tools:layout_editor_absoluteY="81dp">


    <RelativeLayout
        android:id="@+id/CameraLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SurfaceView
            android:id="@+id/CameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/BackgroundTint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:tint="@android:color/holo_green_dark"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:color/white" />

        <TextView
            android:id="@+id/BarcodeOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp"
            android:text="@string/no_barcode_detected"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="invisible" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/CrossImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tint="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/CameraLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross_75alhpa" />

    <ImageView
        android:id="@+id/TickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tint="@android:color/holo_green_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tick_75alpha" />

    <Switch
        android:id="@+id/CheckInSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="4dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@+id/CheckInLabel"
        app:layout_constraintStart_toEndOf="@+id/CheckOutLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CheckInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="4dp"
        android:text="@string/check_in"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CheckInSwitch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CheckOutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/check_out"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/CheckInSwitch"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LegiInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Legi Nr"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/SubmitLegiNrButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckInSwitch" />

    <Button
        android:id="@+id/SubmitLegiNrButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:onClick="SubmitLegiNrFromTextField"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LegiInputField"
        app:layout_constraintTop_toBottomOf="@+id/CheckInLabel" />

    <TextView
        android:id="@+id/ValidLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:text="Valid"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/RightStatLabel"
        app:layout_constraintStart_toEndOf="@+id/LeftStatLabel"
        app:layout_constraintTop_toBottomOf="@+id/SubmitLegiNrButton" />

    <TextView
        android:id="@+id/ServerErrorLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:text="Server Error"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/RightStatLabel"
        app:layout_constraintStart_toEndOf="@+id/LeftStatLabel"
        app:layout_constraintTop_toBottomOf="@+id/SubmitLegiNrButton" />

    <TextView
        android:id="@+id/InvalidLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:text="Invalid"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/RightStatLabel"
        app:layout_constraintStart_toEndOf="@+id/LeftStatLabel"
        app:layout_constraintTop_toBottomOf="@+id/SubmitLegiNrButton" />

    <TextView
        android:id="@+id/PleaseWaitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="Please Wait..."
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LeftStatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TickImage" />

    <TextView
        android:id="@+id/RightStatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TickImage" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ShowMemberList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="StartMemberListActivity"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp" />

    <TextView
        android:id="@+id/LeftStatDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LeftStatLabel" />

    <TextView
        android:id="@+id/RightStatDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RightStatLabel" />

</android.support.constraint.ConstraintLayout>
